crates/musq/tests/trybuild/fail_from_row.stderr
error: Unsupported shape `no fields`. Expected named fields or unnamed fields.
 --> tests/trybuild/fail_from_row.rs:3:10
  |
3 | #[derive(FromRow)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `FromRow` (in Nightly builds, run with -Z macro-backtrace for more info)
