crates/musq/tests/trybuild/fail_from_row.rs
use musq::FromRow;

#[derive(FromRow)]
struct Bad;

fn main() {}
